--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #@author Geethika Kolukuluri
 spring.application.name=DogsManagementSystem
-spring.datasource.url=jdbc:postgresql://postgresql://database_render_patterns_dms_c8fy_user:DZa8Ecoht5dHuTBk5ikUIbiHdifKl65m@dpg-d04rlqp5pdvs73acbua0-a.oregon-postgres.render.com/database_render_patterns_dms_c8fy:5432/database_render_patterns_dms
+spring.datasource.url=jdbc:postgresql://database_render_patterns_dms_c8fy_user:DZa8Ecoht5dHuTBk5ikUIbiHdifKl65m@dpg-d04rlqp5pdvs73acbua0-a.oregon-postgres.render.com/database_render_patterns_dms_c8fy:5432/database_render_patterns_dms
 spring.datasource.username=database_render_patterns_dms_c8fy_user
 spring.datasource.password=DZa8Ecoht5dHuTBk5ikUIbiHdifKl65m
 #spring.datasource.hikari.maximum-pool-size=10
