--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.jpa.show-sql=true
 server.tomcat.accesslog.enabled=true
 spring.jpa.hibernate.show-sql=true
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
